--- a/public/cheatsheets/markdown-help.css
+++ b/public/cheatsheets/markdown-help.css
@@ -101,8 +101,11 @@
 }
 #facebox .content {
 	width: 800px;
+	color: #333;
 	text-align: left;
 	font: 13.34px/1.2 helvetica,arial,freesans,clean,sans-serif;
+	background: -webkit-gradient(linear,0% 0,5% 100%,from(#f4f9fb),to(#fff));
+	background: -moz-linear-gradient(100% 100% 107deg,#fff,#f4f9fb);
 }
 #facebox .mod {
 	margin: 0 0 10px;
