Stoped using claudflare for underscore-min.js

--- a/views/index.haml
+++ b/views/index.haml
@@ -32,6 +32,6 @@
         -# %a{:href => "https://github.com/kei-s/github-preview", :target => "_blank"} 'kei-s/github-preview'
         -# on GitHub
     %script{:src => "http://code.jquery.com/jquery-1.7.1.min.js"}
-    %script{:src => "http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.2.2/underscore-min.js"}
+    %script{:src => "/scripts/underscore-min.js"}
     %script{:src => "/scripts/app.js"}
     %script{:src => "/cheatsheets/markdown-help.js"}
